--- a/main.ipynb
+++ b/main.ipynb
@@ -28,18 +28,23 @@
     "\n",
     "import spacy, pandas as pd\n",
     "\n",
-    "# we're downloading a pre-trained spacy model and loading it\n",
+    "# spacy internal setup\n",
     "model_loaded: bool = False\n",
     "while not model_loaded:\n",
+    "    # we keep trying until this works...\n",
     "    try:\n",
     "        print(\"attempting to load model\")\n",
+    "        # attempt to load the spacy model\n",
     "        nlp: spacy.Language = spacy.load(\"en_core_web_sm\")\n",
     "        print(\"model loaded successfully\")\n",
     "        model_loaded = True\n",
     "    except BaseException as e:\n",
     "        print(\"model failed to load\")\n",
+    "        # if we fail to load the model, we are going to make\n",
+    "        # sure the package is installed...\n",
     "        from spacy.cli import download\n",
-    "        download(\"en_core_web_sm\")"
+    "        download(\"en_core_web_sm\")\n",
+    "        # then loop around and try to load it again"
    ]
   },
   {
