for some reason my last couple markdown cells didn't get committed before, re-adding them

--- a/main.ipynb
+++ b/main.ipynb
@@ -659,8 +659,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DUMP THE MODELS TO DISK IF WE ARE RE-EVALUATING\n",
-    "# DO NOT DO THIS UNLESS NECESSARY IT TAKES HOURS!!!!"
+    "# DUMP THE MODELS TO DISK IF WE ARE RE-EVALUATING"
    ]
   },
   {
@@ -818,6 +817,18 @@
     "    gsdicts[index_chapter]\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis and Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
